--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.8.4",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "reset-css": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
