--- a/package.json
+++ b/package.json
@@ -6,19 +6,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "gh-pages": "^2.0.1",
-    "jsdom": "^14.0.0",
     "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-icons": "^3.7.0",
     "react-scripts": "2.1.8",
-    "react-typeahead": "^2.0.0-alpha.8",
     "reset-css": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "ext-build": "cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
@@ -33,7 +29,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "cross-env": "^5.2.0"
-  }
+  "devDependencies": {}
 }
