--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.4",
+    "react-switch": "^5.0.1",
     "reset-css": "^4.0.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
