--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-intl": "^4.3.1",
     "react-scripts": "^3.4.1",
     "react-select": "^3.0.4",
     "react-switch": "^5.0.1",
