--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-select": "^3.0.2",
+    "@types/reactstrap": "^8.4.2",
     "@types/styled-components": "^4.1.18",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "gh-pages": "^2.0.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
@@ -18,6 +20,7 @@
     "react-scripts": "^3.4.1",
     "react-select": "^3.0.4",
     "react-switch": "^5.0.1",
+    "reactstrap": "^8.4.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
