Adding a format pm script

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "start": "react-scripts start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "prettier": "^2.0.4"
   }
 }
