--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "@types/react-dom": "16.9.0",
     "@types/react-select": "^3.0.2",
     "@types/reactstrap": "^8.4.2",
-    "@types/styled-components": "^4.1.18",
+    "@types/styled-components": "^5.1.0",
     "axios": "^0.19.0",
     "gh-pages": "^2.0.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-intl": "^4.3.1",
+    "react-intl": "^4.6.10",
     "react-scripts": "^3.4.1",
     "react-select": "^3.0.4",
     "react-switch": "^5.0.1",
     "reactstrap": "^8.4.1",
-    "styled-components": "^4.3.2",
+    "styled-components": "^5.1.1",
     "tailwindcss": "^1.4.6",
-    "typescript": "3.5.3"
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "prestart": "npm run watch:css",
@@ -30,7 +30,7 @@
     "start": "react-scripts start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
+    "format": "prettier --write src/**/*.{js,ts,tsx}",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
