--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
     "@types/react-select": "^3.0.2",
     "@types/reactstrap": "^8.4.2",
     "@types/styled-components": "^5.1.0",
-    "axios": "^0.19.0",
+    "axios": "^0.23.0",
     "gh-pages": "^2.0.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-intl": "^4.6.10",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.3",
     "react-select": "^3.0.4",
     "react-switch": "^5.0.1",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.1.1",
-    "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
   },
   "scripts": {
@@ -53,11 +52,12 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.8",
     "cross-env": "^7.0.2",
     "gh-pages": "^2.2.0",
+    "postcss": "^7.0.39",
     "postcss-cli": "^7.1.0",
     "prettier": "^2.0.4",
-    "tailwindcss": "^1.4.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
