--- a/.gitignore
+++ b/.gitignore
@@ -8,22 +8,30 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
 
 # misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# vercel
+.vercel
 
-.vscode/
-
-# Generated css
-
-src/assets/styles/main.css
+# typescript
+*.tsbuildinfo
