--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/open-sans": "^4.5.2",
+    "@fontsource/raleway": "^4.5.0",
     "dayjs": "^1.10.7",
     "framer-motion": "^4",
     "next": "^12.0.7",
