--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@fontsource/open-sans": "^4.5.2",
     "@fontsource/raleway": "^4.5.0",
     "axios": "^0.27.2",
+    "chakra-react-select": "4.1.2",
     "dayjs": "^1.10.7",
     "framer-motion": "^4",
     "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-query": "^3.32.3",
-    "react-select": "^5.2.1"
+    "react-query": "^3.32.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
