--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fontsource/open-sans": "^4.5.2",
     "@fontsource/raleway": "^4.5.0",
     "axios": "^0.27.2",
-    "chakra-react-select": "4.1.2",
+    "chakra-react-select": "^4.1.4",
     "dayjs": "^1.10.7",
     "framer-motion": "^4",
     "next": "^12.0.7",
