--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-query": "^3.32.3"
+    "react-query": "^3.32.3",
+    "react-to-print": "^2.14.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
