--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "chakra-react-select": "^4.1.4",
     "dayjs": "^1.10.7",
     "framer-motion": "^10.12.18",
+    "jsdom": "^23.0.1",
     "next": "^13.4.7",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^14.0.0",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "babel-jest": "^29.5.0",
