--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11",
     "@fontsource/open-sans": "^5.0.3",
     "@fontsource/raleway": "^5.0.3",
+    "adhan": "^4.4.3",
     "chakra-react-select": "^4.1.4",
     "dayjs": "^1.10.7",
     "framer-motion": "^10.12.18",
