--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@fontsource/open-sans": "^5.0.3",
     "@fontsource/raleway": "^5.0.3",
     "chakra-react-select": "^4.1.4",
+    "cheerio": "^1.0.0",
     "dayjs": "^1.10.7",
     "framer-motion": "^10.12.18",
-    "jsdom": "^23.0.1",
     "next": "^13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
