feat: Migrate from Chakra UI to Tailwind CSS and custom UI components.

--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
     "@fontsource/open-sans": "^5.0.3",
     "@fontsource/raleway": "^5.0.3",
-    "chakra-react-select": "^4.1.4",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "autoprefixer": "^10.4.24",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.10.7",
-    "framer-motion": "^10.12.18",
+    "lucide-react": "^0.575.0",
     "next": "^13.4.7",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.32.3",
-    "react-to-print": "^2.14.7"
+    "react-to-print": "^2.14.7",
+    "tailwind-merge": "^3.5.0",
+    "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
